<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagNFC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nfc_reading">Reading NFC&amp;#133;</string>
    <string name="tag_content_title">Contenu du tag</string>
    <string name="waiting_tag">Approchez un tag NFC/Téléphone</string>
    <string name="cancel">Annuler</string>
    <string name="verrouillable">Verrouillable : </string>
    <string name="ecrivable">Ecriture possible : </string>
    <string name="lockable">Small Text </string>
    <string name="ecriture">Small Text </string>
    <string name="technologies">technologies : </string>
    <string name="tvtec">Small Text </string>
    <string name="iddpoint">Id : </string>
    <string name="tvid">Small Text</string>
    <string name="info">Infos : </string>
    <string name="tvmessage">Large Text</string>
    <string name="share">Share</string>
    <string name="resettag">Reset Tag</string>
    <string name="tag_success">Tag écrit avec succès</string>
    
    
    
    
</resources>
